overflow fixed

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 body {
     overflow-x: hidden;
-    width: 100vw;
+    width: 100%;
     background-color: #F5EBE0;
 }
 
